# basketbuddy

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  basketbuddy.service  build.sh  common.yaml  compose.yaml  december.code-workspace  scan.rviz
.github/workflows/: docker-image.yml
config/: default.ini  lidar_2d.lua
jetson/: CMakeLists.txt
jetson/include/: config.hpp  main.hpp  ports.hpp  rover.hpp  sync.hpp
jetson/scripts/: ps5.py
jetson/src/: main.cpp  ports.cpp  rover.cpp  sync.cpp
ros_ws/: compile_commands.json
ros_ws/src/basketbuddy/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros_ws/src/basketbuddy/config/: lidar_2d.lua  slam.yaml
ros_ws/src/basketbuddy/launch/: cartographer.launch.py  ldlidar.launch.py  ldlidar_with_mgr.launch.py  main.launch.py  slam.rviz  slam.yaml
ros_ws/src/basketbuddy/params/: ldlidar.yaml  lifecycle_mgr.yaml
ros_ws/src/basketbuddy_sim/: CMakeLists.txt  package.xml
ros_ws/src/basketbuddy_sim/launch/: sim.launch.py
ros_ws/src/basketbuddy_sim/models/: bb.urdf
ros_ws/src/basketbuddy_sim/models/basketbuddy_description/: model.config  model.sdf
ros_ws/src/basketbuddy_sim/worlds/werld/: smalltown.world
scripts/: install.sh  setup.sh  start.sh
teensy/: platformio.ini
teensy/include/basketbuddy/: basketbuddy.h  definitions.h  drive.hpp  interrupts.h  led.h  lifting.h  locomotion.h  main.h  message.h  pinout.h  tasks.h  util.h
teensy/src/: basketbuddy.cpp  definitions.cpp  drive.cpp  led.cpp  lifting.cpp  locomotion.cpp  main.cpp  message.cpp  tasks.cpp  util.cpp
teensy/test/: adxl345.ino
